<resources>

    <string name="titulo_app">Natural ColombiApp</string>
    <string name="titulo_parque">Parque nacional natural Tayrona</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="temperatura">Temperatura:</string>
    <string name="descripcion">Descripción:</string>
    <string name="ubicacion_tayrona">Sierra Nevada de Santa Marta</string>
    <string name="temp_tayrona">Entre -12 y 38  °C</string>
    <string name="descr_tayrona">Las estribaciones de la Sierra Nevada de Santa Marta,
        la montaña costera más alta del mundo, se hunden en el mar como los dedos de una
        mano gigantesca entre los que se forman bahías y ensenadas de belleza singular:
        Chengue, Gayraca, Cinto, Neguanje, Concha, Guachaquita, con sus playas de arenas blancas
        delimitadas por, manglares, matorrales o bosques, y bañadas todas por las aguas cristalinas
        del mar Caribe, hacen parte de los muchos atractivos que ofrece el Parque Nacional
        Natural Tayrona.
        Para quienes buscan la contemplación y el descanso, el Parque ofrece magníficas playas
        y el relajante panorama de un mar intensamente azul.
        Quienes se sienten atraídos por actividades más emocionantes podrán disfrutar de caminatas,
        careteo y buceo autónomo.</string>
    <string name="sitios_de_interes">Sitios: de Interés:</string>
    <string name="sitios_tayrona">Museo Arqueológico de Chairama, Playa del Muerto, Sector Arrecifes, La Piscina, Cabo San Juan de Guía, Pueblito Chairama, Playa Boca de Saco, Ciudad Perdida.</string>
    <string name="text_placeholder">text</string>
    <string name="app_name">Park List</string>
    <string name="eje_cafetero">Eje Cafetero</string>
    <string name="leticia">Leticia</string>
    <string name="entre_27_c">Entre 27 °C</string>
</resources>